--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ dj-database-url==3.0.1
 Django==5.2.7
 django-environ==0.12.0
 django-extensions==4.1
+django-jazzmin==3.0.1
 et_xmlfile==2.0.0
 gunicorn==23.0.0
 idna==3.11
